yaplParser.py
# Generated from yapl.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class yaplParser ( Parser ):

    grammarFileName = "yapl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Program'", "'Begin'", "'End'", "'.'", 
                     "'Declare'", "'Const'", "'='", "';'", "','", "'Record'", 
                     "'EndRecord'", "'Procedure'", "'('", "')'", "'Return'", 
                     "':='", "'If'", "'Then'", "'Else'", "'EndIf'", "'While'", 
                     "'Do'", "'EndWhile'", "'Write'", "'new'", "'['", "']'", 
                     "'#'", "'void'", "'int'", "'bool'", "'<'", "'<='", 
                     "'>'", "'>='", "'=='", "'!='", "'And'", "'Or'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LT", "LE", "GT", "GE", "EQ", "NE", "AND", "OR", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "Number", "Boolean", "String", 
                      "Id", "COMMENT", "WHITESPACE" ]

    RULE_program = 0
    RULE_declarationBlock = 1
    RULE_constDeclaration = 2
    RULE_varDeclaration = 3
    RULE_recordDeclaration = 4
    RULE_procedure = 5
    RULE_param = 6
    RULE_procedureCall = 7
    RULE_returnStatement = 8
    RULE_block = 9
    RULE_statement = 10
    RULE_statementList = 11
    RULE_assignment = 12
    RULE_ifStatement = 13
    RULE_whileStatement = 14
    RULE_writeStatement = 15
    RULE_expression = 16
    RULE_primaryExpr = 17
    RULE_arrayLength = 18
    RULE_fullIdentifier = 19
    RULE_selector = 20
    RULE_returnType = 21
    RULE_type = 22
    RULE_baseType = 23
    RULE_literal = 24

    ruleNames =  [ "program", "declarationBlock", "constDeclaration", "varDeclaration", 
                   "recordDeclaration", "procedure", "param", "procedureCall", 
                   "returnStatement", "block", "statement", "statementList", 
                   "assignment", "ifStatement", "whileStatement", "writeStatement", 
                   "expression", "primaryExpr", "arrayLength", "fullIdentifier", 
                   "selector", "returnType", "type", "baseType", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    LT=32
    LE=33
    GT=34
    GE=35
    EQ=36
    NE=37
    AND=38
    OR=39
    ADD=40
    SUB=41
    MUL=42
    DIV=43
    MOD=44
    Number=45
    Boolean=46
    String=47
    Id=48
    COMMENT=49
    WHITESPACE=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.Id)
            else:
                return self.getToken(yaplParser.Id, i)

        def statementList(self):
            return self.getTypedRuleContext(yaplParser.StatementListContext,0)


        def EOF(self):
            return self.getToken(yaplParser.EOF, 0)

        def declarationBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.DeclarationBlockContext)
            else:
                return self.getTypedRuleContext(yaplParser.DeclarationBlockContext,i)


        def procedure(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ProcedureContext)
            else:
                return self.getTypedRuleContext(yaplParser.ProcedureContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = yaplParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(yaplParser.T__0)
            self.state = 51
            self.match(yaplParser.Id)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==yaplParser.T__4 or _la==yaplParser.T__11:
                self.state = 54
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [yaplParser.T__4]:
                    self.state = 52
                    self.declarationBlock()
                    pass
                elif token in [yaplParser.T__11]:
                    self.state = 53
                    self.procedure()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(yaplParser.T__1)
            self.state = 60
            self.statementList()
            self.state = 61
            self.match(yaplParser.T__2)
            self.state = 62
            self.match(yaplParser.Id)
            self.state = 63
            self.match(yaplParser.T__3)
            self.state = 64
            self.match(yaplParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ConstDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.ConstDeclarationContext,i)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.VarDeclarationContext,i)


        def recordDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.RecordDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.RecordDeclarationContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_declarationBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationBlock" ):
                listener.enterDeclarationBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationBlock" ):
                listener.exitDeclarationBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationBlock" ):
                return visitor.visitDeclarationBlock(self)
            else:
                return visitor.visitChildren(self)




    def declarationBlock(self):

        localctx = yaplParser.DeclarationBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declarationBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(yaplParser.T__4)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yaplParser.T__5) | (1 << yaplParser.T__9) | (1 << yaplParser.T__29) | (1 << yaplParser.T__30) | (1 << yaplParser.Id))) != 0):
                self.state = 70
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [yaplParser.T__5]:
                    self.state = 67
                    self.constDeclaration()
                    pass
                elif token in [yaplParser.T__29, yaplParser.T__30, yaplParser.Id]:
                    self.state = 68
                    self.varDeclaration()
                    pass
                elif token in [yaplParser.T__9]:
                    self.state = 69
                    self.recordDeclaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(yaplParser.Id, 0)

        def literal(self):
            return self.getTypedRuleContext(yaplParser.LiteralContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_constDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDeclaration" ):
                listener.enterConstDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDeclaration" ):
                listener.exitConstDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDeclaration" ):
                return visitor.visitConstDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constDeclaration(self):

        localctx = yaplParser.ConstDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(yaplParser.T__5)
            self.state = 76
            self.match(yaplParser.Id)
            self.state = 77
            self.match(yaplParser.T__6)
            self.state = 78
            self.literal()
            self.state = 79
            self.match(yaplParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def Id(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.Id)
            else:
                return self.getToken(yaplParser.Id, i)

        def getRuleIndex(self):
            return yaplParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = yaplParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.type_()
            self.state = 82
            self.match(yaplParser.Id)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==yaplParser.T__8:
                self.state = 83
                self.match(yaplParser.T__8)
                self.state = 84
                self.match(yaplParser.Id)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(yaplParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecordDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(yaplParser.Id, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.VarDeclarationContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_recordDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecordDeclaration" ):
                listener.enterRecordDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecordDeclaration" ):
                listener.exitRecordDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecordDeclaration" ):
                return visitor.visitRecordDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def recordDeclaration(self):

        localctx = yaplParser.RecordDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_recordDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(yaplParser.T__9)
            self.state = 93
            self.match(yaplParser.Id)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.varDeclaration()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yaplParser.T__29) | (1 << yaplParser.T__30) | (1 << yaplParser.Id))) != 0)):
                    break

            self.state = 99
            self.match(yaplParser.T__10)
            self.state = 100
            self.match(yaplParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(yaplParser.ReturnTypeContext,0)


        def Id(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.Id)
            else:
                return self.getToken(yaplParser.Id, i)

        def block(self):
            return self.getTypedRuleContext(yaplParser.BlockContext,0)


        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ParamContext)
            else:
                return self.getTypedRuleContext(yaplParser.ParamContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_procedure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedure" ):
                listener.enterProcedure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedure" ):
                listener.exitProcedure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure" ):
                return visitor.visitProcedure(self)
            else:
                return visitor.visitChildren(self)




    def procedure(self):

        localctx = yaplParser.ProcedureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_procedure)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(yaplParser.T__11)
            self.state = 103
            self.returnType()
            self.state = 104
            self.match(yaplParser.Id)
            self.state = 105
            self.match(yaplParser.T__12)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yaplParser.T__29) | (1 << yaplParser.T__30) | (1 << yaplParser.Id))) != 0):
                self.state = 106
                self.param()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==yaplParser.T__8:
                    self.state = 107
                    self.match(yaplParser.T__8)
                    self.state = 108
                    self.param()
                    self.state = 113
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 116
            self.match(yaplParser.T__13)
            self.state = 117
            self.block()
            self.state = 118
            self.match(yaplParser.Id)
            self.state = 119
            self.match(yaplParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def Id(self):
            return self.getToken(yaplParser.Id, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = yaplParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.type_()
            self.state = 122
            self.match(yaplParser.Id)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(yaplParser.Id, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExpressionContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_procedureCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureCall" ):
                listener.enterProcedureCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureCall" ):
                listener.exitProcedureCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureCall" ):
                return visitor.visitProcedureCall(self)
            else:
                return visitor.visitChildren(self)




    def procedureCall(self):

        localctx = yaplParser.ProcedureCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_procedureCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(yaplParser.Id)
            self.state = 125
            self.match(yaplParser.T__12)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yaplParser.T__12) | (1 << yaplParser.T__24) | (1 << yaplParser.T__27) | (1 << yaplParser.ADD) | (1 << yaplParser.SUB) | (1 << yaplParser.Number) | (1 << yaplParser.Boolean) | (1 << yaplParser.Id))) != 0):
                self.state = 126
                self.expression(0)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==yaplParser.T__8:
                    self.state = 127
                    self.match(yaplParser.T__8)
                    self.state = 128
                    self.expression(0)
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 136
            self.match(yaplParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = yaplParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(yaplParser.T__14)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yaplParser.T__12) | (1 << yaplParser.T__24) | (1 << yaplParser.T__27) | (1 << yaplParser.ADD) | (1 << yaplParser.SUB) | (1 << yaplParser.Number) | (1 << yaplParser.Boolean) | (1 << yaplParser.Id))) != 0):
                self.state = 139
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(yaplParser.StatementListContext,0)


        def declarationBlock(self):
            return self.getTypedRuleContext(yaplParser.DeclarationBlockContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = yaplParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==yaplParser.T__4:
                self.state = 142
                self.declarationBlock()


            self.state = 145
            self.match(yaplParser.T__1)
            self.state = 146
            self.statementList()
            self.state = 147
            self.match(yaplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(yaplParser.AssignmentContext,0)


        def procedureCall(self):
            return self.getTypedRuleContext(yaplParser.ProcedureCallContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(yaplParser.ReturnStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(yaplParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(yaplParser.WhileStatementContext,0)


        def writeStatement(self):
            return self.getTypedRuleContext(yaplParser.WriteStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(yaplParser.BlockContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = yaplParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 149
                self.assignment()
                pass

            elif la_ == 2:
                self.state = 150
                self.procedureCall()
                pass

            elif la_ == 3:
                self.state = 151
                self.returnStatement()
                pass

            elif la_ == 4:
                self.state = 152
                self.ifStatement()
                pass

            elif la_ == 5:
                self.state = 153
                self.whileStatement()
                pass

            elif la_ == 6:
                self.state = 154
                self.writeStatement()
                pass

            elif la_ == 7:
                self.state = 155
                self.block()
                pass


            self.state = 158
            self.match(yaplParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.StatementContext)
            else:
                return self.getTypedRuleContext(yaplParser.StatementContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = yaplParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yaplParser.T__1) | (1 << yaplParser.T__4) | (1 << yaplParser.T__14) | (1 << yaplParser.T__16) | (1 << yaplParser.T__20) | (1 << yaplParser.T__23) | (1 << yaplParser.Id))) != 0):
                self.state = 160
                self.statement()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def fullIdentifier(self):
            return self.getTypedRuleContext(yaplParser.FullIdentifierContext,0)


        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = yaplParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.fullIdentifier()
            self.state = 167
            localctx.op = self.match(yaplParser.T__15)
            self.state = 168
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.elseStatementList = None # StatementListContext
